clients/web/kubernetes_deployment/nginx-master-deployment.yaml
# .yaml is a superset markup language of JSON
# still structured around key value (key: value) pairs

# helpful commands: 
#   kubectl rollout status deployment/alnw-webclient-nginx-deployment # show deployment status
#   kubectl get deployments # show current deployments
#   kubectl describe service # find ingress IP

# YAML Reference:
# https://www.mirantis.com/blog/introduction-to-yaml-creating-a-kubernetes-deployment/

# Kubernetes API reference:
# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.9/#deployment-v1-apps

# Kubernetes NGINX Deployment Reference:
#   https://kubernetes.io/docs/concepts/workloads/controllers/deployment/

apiVersion: v1
kind: Service
metadata:
  name: webclient-loadbalancer-svc
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx
